# joplin-mcp

./: .gitignore  CONTRIBUTING.md  README.md  config.example.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml
src/joplin_mcp/: client.py  config.py  server.py
