[project]
name = "joplin-mcp"
version = "0.3.1"
description = "MCP server for Joplin note-taking app"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.4",
    "httpx>=0.27.0",
]

[project.scripts]
joplin-mcp-server = "joplin_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joplin_mcp"]
